codegen/ui_tests/export_fn_bad_value.stderr
error: expecting string literal
  --> ui_tests/export_fn_bad_value.rs:10:20
   |
10 | #[export_fn(name = true)]
   |                    ^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> ui_tests/export_fn_bad_value.rs:17:8
   |
17 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
